--- a/MemoryMosaic/Styles/Pages/Settings.scss
+++ b/MemoryMosaic/Styles/Pages/Settings.scss
@@ -1,122 +1,107 @@
+@import "../Shared";
+
 #body {
-    padding-top: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+	@include flex-col;
+	justify-content: center;
+	align-items: center;
+	padding-top: 50px;
 
-#body > div {
-    width: 40%;
-    border: 3px solid white;
-    padding: 15px;
-    border-radius: 20px;
-    margin-bottom: 25px;
-}
+	> div {
+		width: 40%;
+		border: 3px solid white;
+		padding: 15px;
+		border-radius: 20px;
+		margin-bottom: 25px;
 
-#body > div > .header {
-    display: block;
-    text-align: center;
-    margin-bottom: 10px;
-    font-size: 24px;
-}
+		> span:first-of-type {
+			display: block;
+			text-align: center;
+			margin-bottom: 10px;
+			font-size: 24px;
+		}
 
-#body > div > .iconTextBtn {
-    margin-right: 5px;
-    margin-bottom: 15px;
-}
+		> .iconTextBtn {
+			margin-right: 5px;
+			margin-bottom: 15px;
+		}
 
-#body > div > .text-setting {
-    margin-top: 4px;
-    margin-bottom: 10px;
-}
+		> .text-setting {
+			margin-top: 4px;
+			margin-bottom: 10px;
 
-#body > div > .text-setting > span, #statsDiv > span, #statsDiv > a {
-    display: block;
-    margin-bottom: 7px;
-    padding: 0;
-}
+			> span, #statsDiv > span, #statsDiv > a {
+				display: block;
+				margin-bottom: 7px;
+				padding: 0;
+			}
+		}
 
-#statsDiv > #drivePercentage {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 7px;
-}
+		> #statsDiv > #drivePercentage {
+			@include flex-row;
+			margin-bottom: 7px;
 
-#statsDiv > #drivePercentage > progress {
-    margin-right: 10px;
-}
+			> progress { margin-right: 10px; }
+		}
 
-#statsDiv > a {
-    color: #0080ff;
-    text-decoration: underline;
-    text-underline: cadetblue;
-}
+		> #statsDiv > a {
+			color: #0080ff;
+			text-decoration: underline;
+			text-underline: cadetblue;
+		}
 
-#body > div > .toggle-setting {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 7px;
-}
+		> .toggle-setting {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			margin-bottom: 7px;
 
-#body > div > .toggle-setting > input[type="checkbox"] {
-    margin-right: 4px;
-}
+			> input[type="checkbox"] { margin-right: 4px; }
+		}
 
-#body > div > .dropdown-setting {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 12px;
-    margin-bottom: 14px;
-}
+		> .dropdown-setting {
+			@include flex-row;
+			margin-top: 12px;
+			margin-bottom: 14px;
 
-#body > div > .dropdown-setting > span {
-    margin-right: 6px;
-}
+			> span { margin-right: 6px; }
 
-#body > div > .dropdown-setting > select {
-    background-color: black;
-    border: 1px solid white;
-    border-radius: 4px;
-}
+			> select {
+				background-color: black;
+				border: 1px solid white;
+				border-radius: 4px;
+			}
+		}
 
-#body > div > #thumbnail-settings {
-    margin-top: 12px;
-    margin-bottom: 14px;
-}
+		> #thumbnail-settings {
+			margin-top: 12px;
+			margin-bottom: 14px;
 
-#body > div > #thumbnail-settings > #thumbnail-slider {
-    display: flex;
-    flex-direction: column;
-    margin-right: 8px;
-    margin-bottom: 4px;
-}
+			> #thumbnail-slider {
+				@include flex-col;
+				margin-right: 8px;
+				margin-bottom: 4px;
 
-#body > div > #thumbnail-settings > #thumbnail-slider > input[type="range"] {
-    width: 180px;
-    margin-bottom: 7px;
-}
+				> input[type="range"] {
+					width: 180px;
+					margin-bottom: 7px;
+				}
+			}
 
-#body > div > #thumbnail-settings > #thumbnail-updating {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
+			> #thumbnail-updating {
+				@include flex-row;
 
-#body > div > #thumbnail-settings > #thumbnail-updating > span {
-    margin-left: 8px;
-}
+				> span { margin-left: 8px; }
 
-#body > div > #thumbnail-settings > #thumbnail-updating > progress {
-    margin-left: 2px;
-    width: 180px;
-}
+				> progress {
+					margin-left: 2px;
+					width: 180px;
+				}
+			}
+		}
+	}
 
-#body > #debugDiv > div {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
+	> #debugDiv > div:last-of-type {
+		@include flex-col;
+		margin-bottom: 20px;
+	}
 }
