--- a/MemoryMosaic/Styles/Pages/Trash.scss
+++ b/MemoryMosaic/Styles/Pages/Trash.scss
@@ -1,17 +1,13 @@
 @import "../Shared";
 
 header {
-    @include page-header(0, 60px);
-}
+	@include page-header(0, 60px);
 
-header > div {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    position: absolute;
-    right: 20px;
-}
+	> div {
+		@include flex-row;
+		position: absolute;
+		right: 20px;
 
-header > div > .iconTextBtn {
-    margin-left: 10px;
+		> .iconTextBtn { margin-left: 10px; }
+	}
 }
