Update Maintenance pages

--- a/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
@@ -26,7 +26,7 @@
             string shortPath = path.Replace(S.libFolderPath, "").Replace('\\', '/');
             shortPath = Path.GetFileName(S.libFolderPath) + shortPath;
 
-            <div class="itemDiv">
+            <div>
                 @if (ext is ".jpg" or ".jpeg" or ".png" or ".gif")
                 {
                     <img title="Click for Full Size Preview" onclick="window.open('@shortPath', '_blank').focus();" src="@shortPath" alt="@shortPath" loading="lazy"/>
