--- a/MemoryMosaic/Styles/Pages/Maintenance/Backups.scss
+++ b/MemoryMosaic/Styles/Pages/Maintenance/Backups.scss
@@ -1,33 +1,26 @@
 @import "../../Shared";
 
 header {
-    @include page-header(0, auto);
-    margin-top: 10px;
-}
+	@include page-header(0, 60px);
 
-header > button {
-    margin-right: 12px;
-}
+	button { margin-right: 12px; }
 
-header > span {
-    font-size: 18px;
+	span { font-size: 18px; }
 }
 
 main {
-    @include flex-main(column, 90px);
-    flex-wrap: wrap;
-}
+	@include flex-main(column, 90px);
+	flex-wrap: wrap;
 
-main > .backup {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 30px;
-    margin-bottom: 20px;
-}
+	> .backup {
+		@include flex-row;
+		height: 30px;
+		margin-bottom: 20px;
 
-main > .backup > span {
-    font-size: 19px;
-    margin-right: 30px;
-    width: 270px;
+		> span {
+			font-size: 19px;
+			margin-right: 30px;
+			width: 270px;
+		}
+	}
 }
