--- a/MemoryMosaic/Styles/Pages/Maintenance/MissingFiles.scss
+++ b/MemoryMosaic/Styles/Pages/Maintenance/MissingFiles.scss
@@ -1,43 +1,41 @@
 ﻿@import "../../Shared";
 
 header {
-    @include page-header(0, auto);
+	@include page-header(0, 60px);
 }
 
 main {
-    @include main(70px);
-    position: absolute;
-}
+	@include main(65px);
+	position: absolute;
 
-main > .missingItem {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 10px;
-}
+	> .missingItem {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		margin-bottom: 10px;
 
-main > .missingItem > .thumbnail {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    width: 60px;
-    height: 60px;
-    background-color: #212121;
-    border-radius: 4px;
-}
+		> .thumbnail {
+			margin: 0;
+			padding: 0;
+			display: flex;
+			width: 60px;
+			height: 60px;
+			background-color: #212121;
+			border-radius: 4px;
 
-main > .missingItem > .thumbnail > img {
-    object-fit: cover;
-    width: 60px;
-    height: 60px;
-}
+			> img {
+				object-fit: cover;
+				width: 60px;
+				height: 60px;
+			}
+		}
 
-main > .missingItem > .info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
+		> .info {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
 
-main > .missingItem > .info > span {
-    margin-left: 10px;
+			> span { margin-left: 10px; }
+		}
+	}
 }
