Update all modal components

--- a/MemoryMosaic/Shared/Modal/ShortcutsReference.razor
+++ b/MemoryMosaic/Shared/Modal/ShortcutsReference.razor
@@ -9,14 +9,14 @@
         </div>
 
         <div id="allShortcuts">
-            <div class="shortcut">
+            <div>
                 <code>Ctrl /</code>
                 <span>Shows this</span>
             </div>
             
             @if (IText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>I</code>
                     <span>@IText</span>
                 </div>
@@ -24,7 +24,7 @@
             
             @if (DelText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Del</code>
                     <span>@DelText</span>
                 </div>
@@ -32,7 +32,7 @@
             
             @if (EscText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Esc</code>
                     <span>@EscText</span>
                 </div>
@@ -40,7 +40,7 @@
             
             @if (LeftText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Left</code>
                     <span>@LeftText</span>
                 </div>
@@ -48,7 +48,7 @@
             
             @if (RightText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Right</code>
                     <span>@RightText</span>
                 </div>
@@ -56,7 +56,7 @@
             
             @if (CtrlDText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Ctrl D</code>
                     <span>@CtrlDText</span>
                 </div>
@@ -64,7 +64,7 @@
             
             @if (CtrlEText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Ctrl E</code>
                     <span>@CtrlEText</span>
                 </div>
@@ -72,7 +72,7 @@
             
             @if (CtrlGText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Ctrl G</code>
                     <span>@CtrlGText</span>
                 </div>
@@ -80,7 +80,7 @@
             
             @if (AltFText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Alt F</code>
                     <span>@AltFText</span>
                 </div>
@@ -88,7 +88,7 @@
             
             @if (AltAText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Alt A</code>
                     <span>@AltAText</span>
                 </div>
@@ -96,7 +96,7 @@
             
             @if (AltCText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Alt C</code>
                     <span>@AltCText</span>
                 </div>
@@ -104,7 +104,7 @@
             
             @if (AltSText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Alt S</code>
                     <span>@AltSText</span>
                 </div>
@@ -112,7 +112,7 @@
             
             @if (AltLeftText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Alt Left</code>
                     <span>@AltLeftText</span>
                 </div>
@@ -120,7 +120,7 @@
             
             @if (AltRightText != null)
             {
-                <div class="shortcut">
+                <div>
                     <code>Alt Right</code>
                     <span>@AltRightText</span>
                 </div>
