--- a/MemoryMosaic/Shared/Modal/ProgressPopUp.razor
+++ b/MemoryMosaic/Shared/Modal/ProgressPopUp.razor
@@ -3,7 +3,7 @@
 <link href="css/Components/Modal/ProgressPopUp.css" rel="stylesheet"/>
 
 <ModalBackground Visibility="@Visibility">
-    <div id="progressPopUp" style="width: @(Width + "px"); height: @(Height + "px")">
+    <div class="progressPopUp" style="width: @(Width + "px"); height: @(Height + "px")">
         <span style="font-size: @(FontSize + "px")">@Message</span>
     </div>
 </ModalBackground>
