--- a/MemoryMosaic/Styles/Components/Modal/ProgressPopUp.scss
+++ b/MemoryMosaic/Styles/Components/Modal/ProgressPopUp.scss
@@ -1,16 +1,16 @@
-﻿#progressPopUp {
-    border: 2px solid white;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    word-wrap: break-word;
-}
+﻿.progressPopUp {
+	border: 2px solid white;
+	border-radius: 8px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+	word-wrap: break-word;
 
-#progressPopUp > span {
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
+	> span {
+		text-align: center;
+		margin-left: 10px;
+		margin-right: 10px;
+	}
 }
