--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -9,8 +9,11 @@
 	src: local("Open Sans"), local("OpenSans"), url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format("woff2");
 }
 
-* {
+:root {
 	--hover-color: rgba(211, 211, 211, 0.1);
+}
+
+* {
 	font-family: Product Sans, sans-serif;
 	color: white;
 	user-select: none;
