Create AlphanumericInput<T>. Inherits from InputComponent<T>. Adjust field declarations.

--- a/MemoryMosaic/Shared/Input/IntInput.razor
+++ b/MemoryMosaic/Shared/Input/IntInput.razor
@@ -1,4 +1,4 @@
-@inherits InputComponent<int>
+@inherits AlphanumericInput<int>
 
 <link href="css/Components/Input/IntInput.css" rel="stylesheet"/>
 
