--- a/MemoryMosaic/Shared/Input/TextInput.razor
+++ b/MemoryMosaic/Shared/Input/TextInput.razor
@@ -1,4 +1,4 @@
-@inherits InputComponent<string>
+@inherits AlphanumericInput<string>
 
 <link href="css/Components/Input/TextInput.css" rel="stylesheet"/>
 
