--- a/MemoryMosaic/Shared/MaterialIcon.razor
+++ b/MemoryMosaic/Shared/MaterialIcon.razor
@@ -2,15 +2,19 @@
 
 @if (Icon == "trash")
 {
-    <svg id="@ID" width="24px" height="24px" class="material-icons-outlined @Class" fill="white" viewBox="0 0 24 24" title="@Title"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg>
+    <svg id="@ID" width="24px" height="24px" class="@IconClass @Class" fill="white" viewBox="0 0 24 24" title="@Title"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg>
 }
 else
 {
-    <span id="@ID" class="material-icons-outlined @Class" style="@IconStyle" title="@Title">@Icon</span>
+    <span id="@ID" class="@IconClass @Class" style="@IconStyle" title="@Title">@Icon</span>
 }
 
 @code {
 	[Parameter, EditorRequired] public string Icon { get; set; } = null!;
 
 	[Parameter] public string? IconStyle { get; set; }
+
+	[Parameter] public bool Outlined { get; set; } = true;
+
+	private string IconClass => Outlined ? "material-icons-outlined" : "material-icons";
 }
