--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -100,7 +100,7 @@
         }
     </div>
     
-    <div id="statsDiv">
+    <div id="stats">
         <span>Stats</span>
         @if (!statsLoaded)
         {
