Create FolderPath and FilePath, replacing SettingsPath and moving settings storage to AppData/Local.

--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -217,7 +217,7 @@
     ///Handles saving and restoring of groups of saved Collections.
     private void SaveBtnClick(int id, MouseEventArgs mouseEventArgs)
     {
-        string filePath = Path.Join(Environment.CurrentDirectory, $"slot{id}.tmp");
+        string filePath = Path.Join(S.FolderPath, $"slot{id}.tmp");
         if (mouseEventArgs.CtrlKey) //Save/overwrite selection.
         {
             SaveSelectionToDisk();
