--- a/MemoryMosaic/Styles/Components/Modal/TwoChoiceInput.scss
+++ b/MemoryMosaic/Styles/Components/Modal/TwoChoiceInput.scss
@@ -1,4 +1,8 @@
 #inputDiv {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 	border: 1px solid white;
 	width: 250px;
 	height: 170px;
