Create center-align mixin in Shared.scss

--- a/MemoryMosaic/Styles/Components/Modal/ModalBackground.scss
+++ b/MemoryMosaic/Styles/Components/Modal/ModalBackground.scss
@@ -1,3 +1,5 @@
+@import "../../Shared";
+
 .modalBackground {
 	position: fixed;
 	top: 0;
@@ -7,10 +9,7 @@
 	z-index: 9999999;
 
 	> div {
-		position: fixed;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
+		@include center-align;
 		background-color: black;
 	}
 }
